# proto-dedupe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_cli_integration.py  test_database_persistence.py  test_service_integration.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-python-application-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-python-application-to/contracts/: cli_interface.md  database_schema.md
sql/: schema.sql
sql/migrations/: 001_initial_schema.sql
src/dedupe/: __init__.py
src/dedupe/cli/: __init__.py  main.py
src/dedupe/config/: __init__.py  database.py
src/dedupe/models/: __init__.py  duplicate_group.py  file_record.py  processing_log.py  tarball_record.py
src/dedupe/services/: __init__.py  database_service.py  duplicate_service.py  hash_service.py  tarball_service.py
tests/contract/: test_cli_cleanup.py  test_cli_process.py  test_cli_query.py  test_database_schema.py
tests/integration/: test_dry_run.py  test_duplicate_detection.py  test_process_single_tarball.py  test_query_duplicates.py  test_space_savings.py
tests/unit/: test_duplicate_group.py  test_file_record.py  test_processing_log.py  test_tarball_record.py
